# libECRS

./: .gitmodules  CMakeLists.txt  README.md
include/ECRS/: adapter.hpp  component_id.hpp  ecrs.hpp  ecs.h  ecs.hpp  entity.hpp  kanren.hpp  serialize.hpp
tests/: 0_ECS.cpp  1_ECRS.cpp  2_serialize.cpp  ECS.cpp
